--- a/851_900.md
+++ b/851_900.md
@@ -23,7 +23,7 @@ Why these are the correct answers:
 -   [ ] AWS Service Catalog allows the company to manage and distribute approved databases, enforcing standardization and governance.
 -   [ ] This combination provides an efficient way to provision databases on demand and scales capacity automatically, minimizing costs when databases are not in use.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. While Aurora can be used, manually starting and stopping instances adds operational overhead and might not be as cost-effective as Aurora Serverless for highly variable usage patterns.
 -   [ ] B. Using Service Catalog with regular Aurora instances doesn’t address the cost-effectiveness for intermittent use as well as Aurora Serverless.
@@ -53,7 +53,7 @@ Why these are the correct answers:
 -   [ ] Mounting the EFS file system on each EC2 instance ensures that all instances have immediate access to the latest website assets.
 -   [ ] This solution minimizes lag time for content updates, as changes are immediately available to all instances.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Copying assets from the newest EC2 instance is complex to manage and introduces delays. Configuring the ALB to only update the newest instance is not a standard or efficient practice.
 -   [ ] C. Downloading assets from S3 to EBS volumes on each instance is inefficient and introduces significant lag time, especially with hourly updates.
@@ -83,7 +83,7 @@ Why these are the correct answers:
 -   [ ] Amazon EventBridge can automate the response to GuardDuty findings by triggering AWS Lambda functions.
 -   [ ] Using a Lambda function to adjust AWS WAF rules allows for automated mitigation of threats detected by GuardDuty.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. AWS Firewall Manager is a security management service that helps manage AWS WAF and other firewall rules across multiple accounts and applications, but it does not perform threat detection like GuardDuty.
 -   [ ] C. Amazon Inspector is a vulnerability management service that scans for software vulnerabilities, not for runtime threat detection.
@@ -113,7 +113,7 @@ Why these are the correct answers:
 -   [ ] This method simplifies credential management and enhances security by avoiding the storage and rotation of passwords.
 -   [ ] Associating an IAM role with the EC2 instances is a straightforward way to grant database access with minimal operational overhead.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Passing credentials through CloudFormation parameters involves managing and securing those parameters, which adds operational overhead.
 -   [ ] B. Storing credentials in Parameter Store is more secure than passing them in CloudFormation, but it still requires managing and retrieving credentials, adding complexity.
@@ -143,7 +143,7 @@ Why these are the correct answers:
 -   [ ] ACM certificates used with CloudFront must be requested in the us-east-1 Region, regardless of where the CloudFront distribution is used.
 -   [ ] Using a public certificate from ACM allows the company to use a custom domain name with CloudFront without additional certificate costs.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Private certificates are used for internal resources and are not suitable for public CloudFront distributions.
 -   [ ] B. Private certificates are not appropriate for public-facing CloudFront distributions. Also, ACM certificates for CloudFront must be in the us-east-1 Region, not us-west-1.
@@ -173,7 +173,7 @@ Why these are the correct answers:
 -   [ ] This solution provides secure, time-limited access to the report without requiring the consultant to have AWS credentials.
 -   [ ] It is operationally efficient because it avoids creating new buckets, modifying bucket permissions, or managing IAM users for temporary access.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Creating a new public S3 website and migrating data is inefficient and exposes all data, not just the report.
 -   [ ] B. Enabling public access to the entire bucket is a security risk and grants more access than necessary.
@@ -203,7 +203,7 @@ Why these are the correct answers:
 -   [ ] They place instances close together in a single Availability Zone, which reduces network latency and increases bandwidth.
 -   [ ] This is essential for HPC workloads that require tightly coupled communication between nodes.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Dedicated Instance tenancy provides instances that run on hardware dedicated to a single customer, but it doesn't necessarily improve network performance in the same way as cluster placement groups.
 -   [ ] C. Spot Instances are cost-effective but can be interrupted, making them unsuitable for HPC workloads that require continuous operation.
@@ -233,7 +233,7 @@ Why these are the correct answers:
 -   [ ] Using two Direct Connect connections from each data center ensures that connectivity is maintained even if one connection fails.
 -   [ ] Terminating at two separate Direct Connect locations on different devices protects against failures at the AWS end.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. This option provides redundancy only for the primary data center, not the secondary.
 -   [ ] B. This option has a single point of failure at the Direct Connect location.
@@ -265,7 +265,7 @@ Why these are the correct answers:
 -   [ ] Trusted Advisor provides cost optimization recommendations at both the management account level, offering an aggregated view, and at the member account level, for specific resources.
 -   [ ] For RDS cost optimization, Reserved Instances are a key strategy, and Trusted Advisor includes checks specifically for RDS Reserved Instance Optimization.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. While member accounts do provide specific recommendations, the finance team wants an organizational view.
 -   [ ] D. Idle DB instances, while a cost factor, is not the primary optimization strategy for *high utilization* instances.
@@ -295,7 +295,7 @@ Why these are the correct answers:
 -   [ ] They do not incur data processing or per-GB charges like NAT gateways or PrivateLink.
 -   [ ] Gateway endpoints keep traffic within the AWS network, enhancing security for confidential data.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. NAT gateways are for enabling instances in private subnets to connect to the internet, and they incur data processing and per-GB charges.
 -   [ ] C. Interface endpoints (AWS PrivateLink) provide private connectivity but are more expensive than gateway endpoints for S3.
@@ -637,7 +637,7 @@ Why these are the correct answers:
 -   [ ] CloudFront's global network ensures efficient content delivery to a growing user base.
 -   [ ] This combination offers a scalable, serverless solution for authentication, authorization, and global content delivery.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. AWS Directory Service is more complex and less suitable for a serverless architecture. An Application Load Balancer doesn't provide global content delivery like CloudFront.
 -   [ ] C. While Cognito is suitable for authentication, S3 Transfer Acceleration is designed to speed up uploads to S3, not for global web content delivery.
@@ -667,7 +667,7 @@ Why these are the correct answers:
 -   [ ] Service Control Policies (SCPs) enable you to set permissions boundaries for member accounts.
 -   [ ] Applying an SCP to deny the launch of large instances enforces the restriction across all accounts with minimal administrative effort.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Updating IAM policies in each account is time-consuming and error-prone.
 -   [ ] B. AWS Resource Access Manager (RAM) is for sharing AWS resources, not for preventing resource creation.
@@ -697,7 +697,7 @@ Why these are the correct answers:
 -   [ ] Amazon Inspector assesses EC2 instances for vulnerabilities and provides detailed reports.
 -   [ ] This combination meets the requirements for OS management and vulnerability assessments.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. AWS Security Hub provides a comprehensive view of your security posture in AWS but does not automate OS patching.
 -   [ ] C. AWS Shield Advanced protects against DDoS attacks, and AWS Config tracks resource configurations, neither of which addresses OS patching and vulnerability scanning.
@@ -729,7 +729,7 @@ Why these are the correct answers:
 -   [ ] DynamoDB global tables provide automatic replication between regions.
 -   [ ] DNS failover allows for quick redirection of traffic to the DR Region.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Launching resources from CloudFormation templates on demand increases recovery time.
 -   [ ] C. Similar to B, launching resources from CloudFormation templates delays recovery.
@@ -758,7 +758,7 @@ Why these are the correct answers:
 -   [ ] S3 gateway endpoints provide connectivity to S3 without using the public internet.
 -   [ ] Gateway endpoints are more cost-effective than other options for accessing S3 from within a VPC.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. NAT gateways allow instances in private subnets to connect to the internet, which violates the requirement.
 -   [ ] B. AWS Storage Gateway is for hybrid cloud storage, not for private access to S3 within AWS.
@@ -792,7 +792,7 @@ Why these are the correct answers:
 -   [ ] An Auto Scaling group ensures that EC2 instances are launched across multiple Availability Zones, and health checks replace unhealthy instances.
 -   [ ] This combination provides both load distribution and fault tolerance.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. While using Route 53 for traffic distribution is valid, it doesn't automatically replace unhealthy instances like an Auto Scaling group.
 -   [ ] C. Using both Network Load Balancer and Application Load Balancer is not cost-effective if only transport layer functionality is needed.
@@ -822,7 +822,7 @@ Why these are the correct answers:
 -   [ ] Using SNS allows for decoupled email notifications.
 -   [ ] This solution is cost-effective for low traffic volumes as you only pay for usage.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Amazon ECS is designed for containerized applications and is overkill for a simple contact form with low traffic.
 -   [ ] C. AWS Amplify Hosting is suitable for full-stack applications, but server-side scripting might not be necessary for a basic contact form, and SQS is a queue service, not for direct email delivery.
@@ -853,7 +853,7 @@ Why these are the correct answers:
 -   [ ] Alternate contacts enable notifications to be sent to specific teams (billing, security, operations).
 -   [ ] This solution ensures that the right teams receive the appropriate notifications securely.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Sharing a single email account among multiple users is a security risk and makes it difficult to track who accessed the emails.
 -   [ ] B. Managing separate distribution lists for each business unit increases complexity and administrative overhead.
@@ -886,7 +886,7 @@ Why these are the correct answers:
 -   [ ] Auto Scaling groups can dynamically adjust the number of EC2 instances processing the queue, scaling the application based on demand.
 -   [ ] This combination improves database connection management and provides asynchronous processing with scalable EC2 instances.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. ElastiCache improves read performance but does not directly address write contention or processing bottlenecks for purchase requests.
 -   [ ] D. Lambda functions have execution time limits and are not designed for long-running or continuously retrying processes.
@@ -916,7 +916,7 @@ Why these are the correct answers:
 -   [ ] Amazon Athena allows you to query data in S3 using SQL, making it suitable for analyzing Cost and Usage Reports.
 -   [ ] This combination enables the creation of a custom dashboard to display NAT gateway costs.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. AWS DataSync is for data transfer, not for querying data in S3 for visualization.
 -   [ ] C. CloudWatch dashboards are primarily for monitoring metrics, not for querying and visualizing detailed cost reports.
@@ -951,7 +951,7 @@ Why these are the correct answers:
 -   [ ]   Adding a Cache-Control private directive to the objects in Amazon S3 will instruct CloudFront to cache the objects but only for the individual user, ensuring that stale content is not served to other users.
 -   [ ]   The combination of these two methods allows for efficient caching while minimizing the risk of serving stale content.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   B.  Setting a default TTL on the S3 bucket has no effect on how CloudFront caches the objects. CloudFront's TTL settings override any caching directives from the origin.
 -   [ ]   D.  Lambda@Edge can add headers, but it adds complexity and is not necessary for basic caching. Also, adding an Expires header is not as flexible as using Cache-Control directives.
@@ -983,7 +983,7 @@ Why these are the correct answers:
 -   [ ]   Connecting Lambda functions to the private subnets allows them to directly access the EC2 instances.
 -   [ ]   This solution optimizes costs across both EC2 and Lambda, and ensures the required network connectivity.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   A.  An EC2 Instance Savings Plan only provides savings for EC2 usage, not Lambda.
 -   [ ]   B.  Using public subnets for Lambda functions is less secure and does not align with best practices.
@@ -1013,7 +1013,7 @@ Why these are the correct answers:
 -   [ ]   Budget actions can automatically apply IAM policies to restrict resource creation when a budget is exceeded.
 -   [ ]   This solution provides automated cost control with minimal operational overhead.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   A.  Tagging and using Config rules require manual tagging by developers and Lambda function maintenance.
 -   [ ]   C.  Cost Explorer and Anomaly Detection provide monitoring but do not actively prevent cost overruns.
@@ -1050,7 +1050,7 @@ Why these are the correct answers:
 -   [ ]   The application tier needs to allow inbound HTTPS traffic from the security group for the web tier.
 -   [ ]   Security groups should be configured to allow only necessary traffic between tiers.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   B.  The web tier does not need to allow outbound HTTPS traffic to 0.0.0.0/0, unless it is initiating connections to the internet, which is not described in the scenario.
 -   [ ]   D.  The database tier should not allow outbound traffic to the web tier.
@@ -1082,7 +1082,7 @@ Why these are the correct answers:
 -   [ ]   A SageMaker Savings Plan specifically covers SageMaker usage.
 -   [ ]   These two plans together provide cost optimization for all the services used by the company.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   A.  An EC2 Instance Savings Plan does not cover Lambda or Fargate.
 -   [ ]   B.  A Compute Savings Plan does not cover SageMaker.
@@ -1114,7 +1114,7 @@ Why these are the correct answers:
 -   [ ]   AWS SCT and DMS help migrate the database schema and data from SQL Server to Aurora PostgreSQL.
 -   [ ]   This combination provides both application compatibility and database migration capabilities.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   A.  AWS SCT is for schema conversion, not for rewriting SQL queries in applications.
 -   [ ]   D.  Amazon RDS Proxy is for managing database connections, not for code compatibility.
@@ -1145,7 +1145,7 @@ Why these are the correct answers:
 -   [ ]   Configuring EC2 account attributes to always encrypt new EBS volumes ensures that all newly created volumes are encrypted by default.
 -   [ ]   This setting also prevents the creation of unencrypted volumes, meeting the requirement.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   B.  AWS Config can detect non-compliant volumes but does not prevent their creation.
 -   [ ]   C.  AWS Systems Manager does not have a feature to enforce encryption on new EBS volumes.
@@ -1175,7 +1175,7 @@ Why these are the correct answers:
 -   [ ]   AWS Lambda can process the data in real-time, providing a scalable and serverless compute environment.
 -   [ ]   This combination offers a scalable and cost-effective solution for real-time clickstream analysis.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   B.  Kinesis Data Firehose is for loading data into destinations, not for real-time processing, and AWS Glue is for ETL, not real-time analysis.
 -   [ ]   C.  Kinesis Video Streams is for video and audio data, not clickstream data.
@@ -1207,7 +1207,7 @@ Why these are the correct answers:
 -   [ ]   Amazon S3 Storage Lens provides organization-wide visibility into S3 usage and data protection, including versioning status.
 -   [ ]   It can aggregate data across multiple regions and accounts, making it suitable for identifying non-compliant buckets globally.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   A.  AWS CloudTrail records API calls but does not provide a direct way to identify S3 buckets based on their versioning status.
 -   [ ]   C.  IAM Access Analyzer for S3 helps identify shared access to S3 buckets, not versioning status.
@@ -1236,7 +1236,7 @@ Why these are the correct answers:
 -   [ ]   S3 Glacier Instant Retrieval offers low-cost storage with retrieval times measured in milliseconds, meeting the immediate accessibility requirement.
 -   [ ]   Using S3 Lifecycle policies automates the transition of files to Glacier Instant Retrieval after 30 days and deletion after 4 years, optimizing costs.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   B.  S3 One Zone-IA is cheaper but has lower availability and is not suitable for data that cannot be recreated.
 -   [ ]   C.  S3 Standard-IA is more expensive than Glacier Instant Retrieval for long-term storage.
@@ -1284,7 +1284,7 @@ Why these are the correct answers:
 -   [ ]   S3 Cross-Region Replication ensures data is copied between buckets, supporting failover scenarios.
 -   [ ]   This combination allows the application to write to the closest bucket while maintaining data redundancy and failover capabilities.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   A.  While using regional endpoints can reduce latency, it requires the application to manage which endpoint to use and doesn't provide automated failover.
 -   [ ]   B.  Active-passive configurations introduce complexity in failover management, and creating multiple global endpoints is not the standard use case for Multi-Region Access Points.
@@ -1338,7 +1338,7 @@ Why these are the correct answers:
 -   [ ]   An Application Load Balancer distributes traffic and improves application availability.
 -   [ ]   This approach provides reliability and fault tolerance without requiring changes to the application design.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   B.  AWS Backup is for data recovery, not for ensuring continuous availability.
 -   [ ]   C.  Launching two instances in separate AZs improves availability but doesn't automatically replace failed instances like Auto Scaling.
@@ -1387,7 +1387,7 @@ Why these are the correct answers:
 -   [ ]   Sharing a central networking VPC with workload accounts simplifies network management.
 -   [ ]   This solution provides account creation and network management with the least operational overhead.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   B.  AWS Organizations helps with account management but does not provide the automated account setup and security controls of Control Tower.
 -   [ ]   C.  Deploying a VPC in each workload account and using a transit gateway for inspection adds complexity and operational overhead.
@@ -1433,7 +1433,7 @@ Why these are the correct answers:
 -   [ ]   Amazon CloudFront delivers content globally with low latency and high transfer speeds.
 -   [ ]   This combination reduces hosting costs and improves performance for increased traffic.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   B.  ElastiCache is for caching dynamic data, not for serving static website content.
 -   [ ]   C.  AWS Amplify is suitable but might be more than needed for simple static content hosting, and using an ALB adds unnecessary cost.
@@ -1479,7 +1479,7 @@ Why these are the correct answers:
 -   [ ]   It supports SMB protocol, allowing easy access from Windows clients.
 -   [ ]   FSx for Windows File Server minimizes administrative overhead as AWS manages the underlying infrastructure.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   A.  Storage Gateway Volume Gateway is for block storage, not file sharing with SMB.
 -   [ ]   B.  Storage Gateway Tape Gateway is for backup and archival, not for active file sharing.
@@ -1522,7 +1522,7 @@ Why these are the correct answers:
 -   [ ]   It offers RPO in seconds and RTO typically less than one minute.
 -   [ ]   Managed failover automates the failover process, minimizing operational overhead.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   A.  Read replicas are for scaling reads, not for fast automated failover.
 -   [ ]   C.  Cross-Region Replication requires more manual steps for failover and doesn't offer the same RPO/RTO as Global Database.
@@ -1567,7 +1567,7 @@ Why these are the correct answers:
 -   [ ]   Containers can encapsulate the job's dependencies, ensuring consistency.
 -   [ ]   Fargate can run for hours and is suitable for stateful jobs.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   B.  Lambda has execution time limits that are too short for a 1-hour job.
 -   [ ]   C.  Spot Instances can be interrupted, which is not suitable for a job that cannot tolerate interruptions.
@@ -1609,7 +1609,7 @@ Why these are the correct answers:
 -   [ ]   It automates the collection and management of security data, reducing development effort.
 -   [ ]   Storing the data in a data lake allows for comprehensive analysis.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   A.  AWS Lake Formation requires more setup and configuration to ingest and manage security data.
 -   [ ]   B.  Lambda functions and S3 require custom code to collect and format security data.
@@ -1653,7 +1653,7 @@ Why these are the correct answers:
 -   [ ]   It reduces the administrative overhead of managing multiple connections.
 -   [ ]   For a large number of applications, Transit Gateway is more scalable and manageable than other options.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   A.  VPN tunnels are complex to manage and scale for a large number of VPCs.
 -   [ ]   B.  VPC peering is also complex to manage at scale, as it requires individual connections between each VPC.
@@ -1703,7 +1703,7 @@ Why these are the correct answers:
 -   [ ]   Amazon ECS Anywhere enables running containers on-premises, providing a consistent container orchestration solution across environments. [cite: 9]
 -   [ ]   An Application Load Balancer is suitable for routing HTTP traffic to ECS services. [cite: 10]
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   C.  A Network Load Balancer is better suited for TCP or UDP traffic, not HTTP. [cite: 11]
 -   [ ]   D.  Fargate cannot be used on-premises; ECS Anywhere is needed. [cite: 12, 13]
