--- a/851_900.md
+++ b/851_900.md
@@ -328,7 +328,7 @@ Why these are the correct answers:
 -   [ ] Amazon CloudWatch allows you to monitor write operation metrics, enabling you to identify and address performance bottlenecks.
 -   [ ] Adjusting provisioned IOPS lets you optimize database performance to handle high write volumes effectively.
 
-Why are the other answers wrong:
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. While ElastiCache can improve read performance, it doesn't directly address high write volumes to the database.
 -   [ ] C. Amazon DocumentDB is a NoSQL database and not a direct replacement for MySQL, and memory optimization might not be sufficient for high write loads.
@@ -360,7 +360,7 @@ Why these are the correct answers:
 -   [ ] Using AWS KMS allows the company to manage the encryption keys securely.
 -   [ ] Storing the encrypted files in an S3 bucket provides a scalable and durable storage solution.
 
-Why are the other answers wrong:
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Server-side encryption encrypts the data at rest in S3, but it does not encrypt the data before it is sent to AWS, which does not meet the requirement.
 -   [ ] B. Similar to Option A, server-side encryption with KMS keys encrypts data at rest, not before it is sent to AWS.
@@ -391,7 +391,7 @@ Why these are the correct answers:
 -   [ ] RDS automated backups can be configured to run daily with a retention period of up to 35 days.
 -   [ ] This is the simplest and most operationally efficient way to meet the requirements, as it relies on built-in RDS functionality.
 
-Why are the other answers wrong:
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Using a Lambda function adds complexity and requires managing the function and its permissions.
 -   [ ] C. Systems Manager Maintenance Windows are for scheduling OS maintenance, not RDS backups.
@@ -420,7 +420,7 @@ Why these are the correct answers:
 -   [ ] Aurora read replicas are designed to handle read-heavy workloads, offloading read queries from the primary database and improving performance.
 -   [ ] This solution is cost-effective because read replicas share the underlying storage with the primary instance, reducing costs compared to creating a separate cluster.
 
-Why are the other answers wrong:
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Creating a second Aurora cluster is more expensive than using read replicas.
 -   [ ] B. DAX is for DynamoDB, not Aurora, and is not suitable for relational database read scaling.
@@ -451,7 +451,7 @@ Why these are the correct answers:
 -   [ ] Amazon Kinesis Data Firehose is designed for ingesting streaming data and can handle large volumes with scalability.
 -   [ ] AWS Fargate with Amazon ECS provides a serverless compute platform for containers, suitable for running the 30-minute processing job in a scalable manner.
 
-Why are the other answers wrong:
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. While Lambda and Step Functions are serverless, Lambda has execution time limits that may not be suitable for a 30-minute job.
 -   [ ] C. AWS DMS is for database migration, not for real-time streaming data ingestion.
@@ -482,7 +482,7 @@ Why these are the correct answers:
 -   [ ] Gateway VPC endpoints enable private connections to S3 from within a VPC without traversing the internet.
 -   [ ] Routing traffic through a gateway endpoint ensures that data transfer to S3 remains within the AWS network, meeting the security requirement.
 
-Why are the other answers wrong:
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Network Load Balancers are for distributing traffic to EC2 instances, not for connecting to S3.
 -   [ ] C. S3 buckets cannot be deployed inside a VPC.
@@ -513,7 +513,7 @@ Why these are the correct answers:
 -   [ ] AWS Compute Optimizer analyzes the utilization metrics of your AWS resources, including EBS volumes, and provides recommendations to help you optimize their performance and cost.
 -   [ ] It offers estimated monthly savings by suggesting right-sizing options.
 
-Why are the other answers wrong:
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Amazon Inspector is a vulnerability management service, not a tool for cost optimization of EBS volumes.
 -   [ ] B. AWS Systems Manager is for managing EC2 instances, not for providing EBS cost optimization recommendations.
@@ -543,7 +543,7 @@ Why these are the correct answers:
 -   [ ] Amazon S3 Storage Lens provides organization-wide visibility into S3 usage and data protection, including whether versioning is enabled.
 -   [ ] It can aggregate data across multiple regions and accounts, making it suitable for identifying non-compliant buckets globally.
 
-Why are the other answers wrong:
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] C. IAM Access Analyzer for S3 helps identify shared access to S3 buckets, not versioning status.
 -   [ ] D. S3 Multi-Region Access Points are for accessing data in multiple regions with a single endpoint, not for auditing bucket configurations.
@@ -571,7 +571,7 @@ Why these are the correct answers:
 -   [ ] Amazon SQS FIFO queues are designed to provide exactly-once processing and maintain the order of messages, which is crucial for order processing.
 -   [ ] Using Lambda to process the orders allows for scalable and serverless processing that can handle traffic surges.
 
-Why are the other answers wrong:
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Amazon SNS standard topics do not guarantee message order or exactly-once delivery.
 -   [ ] C. Amazon AppFlow is for data transfer between AWS services and SaaS applications, not for order processing within an application.
@@ -603,7 +603,7 @@ Why these are the correct answers:
 -   [ ] This approach allows developers in the Development account to assume the role and gain temporary access to the Production account.
 -   [ ] It provides flexibility to control who can access the Production account by managing who can assume the role.
 
-Why are the other answers wrong:
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Creating separate policies in each account does not provide a streamlined way for developers in one account to access resources in another.
 -   [ ] B. Creating the role in the Development account and granting it access to the Production account is less secure and not a best practice for cross-account access.
